--- a/cesium-viewer/examples/styles.css
+++ b/cesium-viewer/examples/styles.css
@@ -36,6 +36,15 @@ ul{
   padding:0;
   margin:0;
 }
+input[type="radio"] {
+    /* Add if not using autoprefixer */
+    -webkit-appearance: none;
+    appearance: none;
+    /* For iOS < 15 to remove gradient background */
+    background-color: #fff;
+    /* Not removed via appearance */
+    margin: 0;
+}
 cesium-viewer {
   height: 100%;
 }
